fix spacing of lookingglass (#66)

--- a/docs/_sass/dark_mode.scss
+++ b/docs/_sass/dark_mode.scss
@@ -394,12 +394,12 @@ body.cv-page .hero-body > .container.is-max-desktop { max-width: 960px; }
 	margin-top: -5rem;
 	margin-bottom: 0;
 	position: relative;
-	top: -5rem;
+	top: -4rem;
 }
 
 @media (max-width: 768px) {
 	.viz-container {
-		top: -4rem;
+		top: -3rem;
 	}
 
 }
